--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/preset-env": "^7.26.9",
     "@symfony/webpack-encore": "^5.0.1",
     "bootstrap": "^5.3.3",
+    "file-loader": "^6.2.0",
     "node-sass": "^9.0.0",
     "sass-loader": "^16.0.5",
     "webpack-cli": "^5.1.4",
