--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "@babel/plugin-transform-runtime": "^7.26.9",
     "@babel/preset-env": "^7.26.9",
     "@symfony/webpack-encore": "^5.0.1",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.5",
     "file-loader": "^6.2.0",
     "node-sass": "^9.0.0",
     "sass-loader": "^16.0.5",
@@ -20,9 +20,11 @@
   "dependencies": {
     "@npmcli/fs": "^4.0.0",
     "babel-cli": "^6.26.0",
+    "chart.js": "^4.4.9",
     "glob": "^11.0.1",
     "lru-cache": "^11.0.2",
     "rimraf": "^6.0.1",
-    "sass": "^1.85.0"
+    "sass": "^1.85.0",
+    "sweetalert2": "^11.19.1"
   }
 }
