--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,6 +4,7 @@ security:
     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
     App\Entity\User:
       algorithm: auto
+
   # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
   providers:
     # used to reload user from session & other features (e.g. switch_user)
@@ -11,10 +12,12 @@ security:
       entity:
         class: App\Entity\User
         property: email
+
   firewalls:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
+
     main:
       lazy: true
       provider: app_user_provider
@@ -39,8 +42,8 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-    # - { path: ^/admin, roles: ROLE_ADMIN }
-    # - { path: ^/profile, roles: ROLE_USER }
+    - { path: ^/admin, roles: [ROLE_ADMIN, ROLE_RESTAURATEUR] }
+    - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
   security:
